<resources>
    <string name="app_name">Windy</string>
    <string name="pa">amhsn.weatherapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">menu</string>
    <string name="notification">Notification</string>
    <string name="giza_egypt">Giza, Egypt</string>
    <string name="monday">monday</string>
    <string name="_17_c">17 C</string>
    <string name="temp">imgTemp</string>
    <string name="imghumidity">imgHumidity</string>
    <string name="humidity">Humidity</string>
    <string name="_65">65%</string>
    <string name="cloudy">cloudy</string>
    <string name="speed_wind">Wind speed</string>
    <string name="_36_2_km_h">36.2 km/h</string>
    <string name="pressure">Pressure</string>
    <string name="_1_130_mbar">1.130 mBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="location">Location</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About us</string>
    <string name="todo">todo</string>
    <string name="add_new_location">Add new location</string>
    <string name="units">Units</string>
    <string name="weather_location">Weather Location</string>
    <string name="used_device_location">Use device location</string>
    <string name="allow_location">Allow the app to get your location</string>
    <string name="desc_customLocation">The location for which the weather is displayed</string>
    <string name="show_notification">Notification Alert</string>
    <string name="units_of_temperature">Temperature unit</string>
    <string name="units_of_wind">Wind speed</string>
    <string name="m_s">m/s</string>
    <string name="km_h">miles/h</string>
    <string name="f">F</string>
    <string name="k">K</string>
    <string name="c">C</string>
    <string name="language">Languages</string>
    <string name="Arabic">Arabic</string>
    <string name="english">English</string>
    <string name="last_update">Last Update : </string>
    <string name="enable_location_service">Enable Location Service</string>
    <string name="location_service">Location Service</string>
    <string name="today">Today</string>
    <string name="next_days">Next 6 days</string>
    <string name="loading">Loading</string>
    <string name="title_activity_maps">Map</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="alarms">Alarms</string>
    <string name="Reminder">Reminder</string>
    <string name="internet">No internet connection</string>
    <string name="map">Map</string>
    <string name="do_you_want_an_alert_to_appear_when_the_weather_is_dangerous">Do you want an alert to appear when the weather is dangerous?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="show_alarm">Show alarts</string>
    <string name="alarm_expired">This Alarm is expired</string>
    <string name="cancel_alarm">Cancel alarm</string>
    <string name="likes">Feels like</string>
    <string name="not_found_location">Not found location</string>
    <string name="type_alarm">Type Alarm</string>
    <string name="type">Type</string>
    <string name="alarm">Alarm</string>
    <string name="sound">Sound</string>
    <string name="no_sound">No Sound</string>
    <string name="type_of_alarm">Type of alarm</string>
    <string name="alarm_sound">Alarm sound</string>
    <string name="date_time"><![CDATA[Date &Time]]></string>
    <string name="date_expired">The date is expired</string>
    <string name="item_details">Item Details</string>
    <string name="hpa">hpa</string>
    <string name="cancel">Cancel</string>

</resources>