<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_location"
            android:icon="@drawable/ic_location"
            android:title="@string/location" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>

<!--    <item android:title="@string/communicate">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:id="@+id/nav_share"-->
<!--                android:icon="@drawable/ic_share"-->
<!--                android:title="@string/share" />-->
<!--            <item-->
<!--                android:id="@+id/nav_about"-->
<!--                android:icon="@drawable/ic_share"-->
<!--                android:title="@string/about_us" />-->
<!--        </menu>-->
<!--    </item>-->

</menu>
