<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            tools:context=".ui.ui.settings.SettingsFragment">

            <TextView
                android:id="@+id/txt_weatherLocation"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/weather_location"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/txt_deviceLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/used_device_location"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.057"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_weatherLocation" />

            <TextView
                android:id="@+id/txt_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:text="@string/allow_location"
                android:textColor="#6C6A6A"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.068"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_deviceLocation" />


            <Switch
                android:id="@+id/settings_switch_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.986"
                app:layout_constraintStart_toEndOf="@+id/txt_deviceLocation"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <LinearLayout
                android:id="@+id/layout_getCustomLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_switch">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/location"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/desc_customLocation"
                    android:textColor="#6C6A6A"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.096"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_deviceLocation" />

            </LinearLayout>

            <View
                android:id="@+id/view1"
                android:layout_width="match_parent"
                android:layout_height="2dp"

                android:layout_marginTop="16dp"

                android:background="#DDD6D6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_getCustomLocation" />


            <TextView
                android:id="@+id/txt_notification"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/notification"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.058"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view1" />

            <TextView
                android:id="@+id/txt_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="@string/show_notification"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.067"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_notification" />


            <Switch
                android:id="@+id/settings_switch_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.991"
                app:layout_constraintStart_toEndOf="@+id/txt_notify"
                app:layout_constraintTop_toBottomOf="@+id/view1"
                tools:ignore="UseSwitchCompatOrMaterialXml" />


<!--            <TextView-->
<!--                android:id="@+id/txt_alart"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="16dp"-->
<!--                android:layout_marginStart="16dp"-->
<!--                android:layout_marginTop="20dp"-->
<!--                android:text="@string/show_alarm"-->
<!--                android:textColor="@color/black"-->
<!--                android:textSize="14sp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.063"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/txt_notify" />-->

<!--            <Switch-->
<!--                android:id="@+id/settings_switch_alart"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:layout_marginEnd="16dp"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintHorizontal_bias="0.989"-->
<!--                app:layout_constraintStart_toEndOf="@+id/txt_alart"-->
<!--                app:layout_constraintTop_toBottomOf="@+id/settings_switch_notify"-->
<!--                tools:ignore="UseSwitchCompatOrMaterialXml" />-->

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#DDD6D6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_notify" />


            <TextView
                android:id="@+id/txt_units"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/units"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view2" />

            <RelativeLayout
                android:id="@+id/layoutUnitTemp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_units">

                <TextView
                    android:id="@+id/txt_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/units_of_temperature"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <RadioGroup
                    android:id="@+id/radioGroupUint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginEnd="13dp"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap">

                    <RadioButton
                        android:id="@+id/radioF"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:checked="false"
                        android:text="@string/f"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioK"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:checked="false"
                        android:text="@string/k"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioC"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/c"
                        android:textSize="14sp" />
                </RadioGroup>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layoutUnitWind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutUnitTemp">

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:text="@string/units_of_wind"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <RadioGroup
                    android:id="@+id/radioGroupWind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap">

                    <RadioButton
                        android:id="@+id/radioMS"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="16dp"
                        android:checked="false"
                        android:text="@string/m_s"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioMH"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/km_h"
                        android:textSize="14sp" />

                </RadioGroup>

            </RelativeLayout>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:background="#DDD6D6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layoutUnitWind" />


            <TextView
                android:id="@+id/txt_language"
                style="@android:style/TextAppearance.DeviceDefault.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/language"
                android:textColor="@color/blue_dark"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/view3" />

            <RelativeLayout
                android:id="@+id/layoutUnitLang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_language">

                <TextView
                    android:id="@+id/txt_lang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="16dp"
                    android:text="@string/language"
                    android:textColor="@color/black"
                    android:textSize="14sp" />


                <RadioGroup
                    android:id="@+id/radioGroupLang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:layout_marginEnd="16dp"
                    android:orientation="horizontal"
                    tools:ignore="RelativeOverlap">

                    <RadioButton
                        android:id="@+id/radioAr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:checked="false"
                        android:text="@string/Arabic"
                        android:textSize="14sp" />

                    <RadioButton
                        android:id="@+id/radioEn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/english"
                        android:textSize="14sp" />

                </RadioGroup>
            </RelativeLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>